test_regress/t/t_randomize_null_class_unsup.out
%Error-UNSUPPORTED: t/t_randomize_null_class_unsup.v:22:13: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                          : ... note: In instance 't'
   22 |     void'(o.randomize(null));
      |             ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
